<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strBtn1"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/chair" />
        <Button
            android:id="@+id/button1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/strBtn2" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/strBtn3"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/strBtn4"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/strBtn5"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextSize"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/strBtn4"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/strBtn6"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextPay"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="textPersonName"
        android:text="@string/strBtn7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/strBtn8" />


</LinearLayout>