<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity4">


    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strBtn14"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/button6"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/strBtn21" />

        <Button
            android:id="@+id/button7"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/strBtn22" />


    </LinearLayout>


</LinearLayout>